# Tiger

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.prototxt
include/: blob.hpp  common.hpp  data_transformer.hpp  layer.hpp  solver.hpp  solver_factory.hpp  sycedmem.hpp  syncedmem.hpp
include/layers/: base_data_layer.hpp  data_layer.hpp
include/tiger/: blob.hpp  common.hpp  data_transformer.hpp  filler.hpp  filter.hpp  im2col.hpp  layer.hpp  layer_factory.hpp  net.hpp  sgd_solver.hpp  solver.hpp  solver_factory.hpp  syncedmem.hpp  test_main.hpp
include/tiger/layers/: base_data_layer.hpp  cudnn_dropout_layer.hpp  cudnn_pooling_layer.hpp  cudnn_relu_layer.hpp  cudnn_sigmoid_layer.hpp  cudnn_tanh_layer.hpp  data_layer.hpp  dropout_layer.hpp  inner_product_layer.hpp  loss_layer.hpp  neuron_layer.hpp  pooling_layer.hpp  relu_layer.hpp  sigmoid_layer.hpp  tanh_layer.hpp
include/tiger/layers/conv/: base_conv_layer.hpp  conv_layer.hpp  deconv_layer.hpp  pooling_layer.hpp
include/tiger/layers/cudnn/: cudnn_conv_layer.hpp  cudnn_deconv_layer.hpp  cudnn_dropout_layer.hpp  cudnn_pooling_layer.hpp  cudnn_relu_layer.hpp  cudnn_sigmoid_layer.hpp  cudnn_softmax.hpp  cudnn_tanh_layer.hpp
include/tiger/layers/data/: base_data_layer.hpp  data_layer.hpp
include/tiger/layers/loss/: euclidean_loss_layer.hpp  loss_layer.hpp
include/tiger/layers/neuron/: dropout_layer.hpp  inner_product_layer.hpp  neuron_layer.hpp  relu_layer.hpp  sigmoid_layer.hpp  softmax_layer.hpp  tanh_layer.hpp
include/tiger/layers/norm/: batch_norm_layer.hpp
include/tiger/utils/: blocking_queue.hpp  cudnn.hpp  device_alternate.hpp  io.hpp  leveldb.hpp  math_function.hpp  rng.hpp  signal_handler.h
include/utils/: blocking_queue.hpp  device_alternate.hpp  io.hpp  math_function.hpp
python/: test_inner_product_layer.py  test_matrix.py
sample/bdd100k/: convert_bdd100k.cpp  get_bdd100k.cpp  run.sh
sample/mnist/: convert_mnist.cpp  get_mnist.cpp  run.sh
src/: blob.cpp  common.cpp  data_transformer.cpp  solver.cpp  syncedmem.cpp
src/benchmark/: CMakeLists.txt
src/benchmark/proto/: benchmark.proto
src/layers/: base_data_layer.cpp  data_layer.cpp
src/proto/: tiger.proto
src/tiger/: CMakeLists.txt  blob.cpp  common.cpp  data_transformer.cpp  im2col.cpp  layer_factory.cpp  net.cpp  solver.cpp  syncedmem.cpp
src/tiger/layers/: base_data_layer.cpp  cudnn_dropout_layer.cpp  cudnn_pooling_layer.cpp  cudnn_pooling_layer.cu  cudnn_relu_layer.cpp  cudnn_relu_layer.cu  cudnn_sigmoid_layer.cpp  cudnn_sigmoid_layer.cu  cudnn_tanh_layer.cpp  cudnn_tanh_layer.cu  data_layer.cpp  dropout_layer.cpp  inner_product_layer.cpp  inner_product_layer.cu  loss_layer.cpp  neuron_layer.cpp  pooling_layer.cpp  pooling_layer.cu  relu_layer.cpp  relu_layer.cu  sigmoid_layer.cpp  sigmoid_layer.cu  tanh_layer.cpp  tanh_layer.cu
src/tiger/layers/conv/: base_conv_layer.cpp  conv_layer.cpp  conv_layer.cu  pooling_layer.cpp  pooling_layer.cu
src/tiger/layers/cudnn/: cudnn_dropout_layer.cpp  cudnn_dropout_layer.cu  cudnn_pooling_layer.cpp  cudnn_pooling_layer.cu  cudnn_relu_layer.cpp  cudnn_relu_layer.cu  cudnn_sigmoid_layer.cpp  cudnn_sigmoid_layer.cu  cudnn_softmax.cpp  cudnn_softmax.cu  cudnn_tanh_layer.cpp  cudnn_tanh_layer.cu
src/tiger/layers/data/: base_data_layer.cpp  data_layer.cpp
src/tiger/layers/loss/: euclidean_loss_layer.cpp  euclidean_loss_layer.cu  loss_layer.cpp
src/tiger/layers/neuron/: dropout_layer.cpp  dropout_layer.cu  inner_product_layer.cpp  inner_product_layer.cu  neuron_layer.cpp  relu_layer.cpp  relu_layer.cu  sigmoid_layer.cpp  sigmoid_layer.cu  softmax_layer.cpp  softmax_layer.cu  tanh_layer.cpp  tanh_layer.cu
src/tiger/proto/: tiger.proto
src/tiger/utils/: blocking_queue.cpp  cudnn.cu  io.cpp  levedb.cpp  math_function.cpp  math_function.cu  signal_handler.cpp
src/utils/: blocking_queue.cpp  io.cpp  levedb.cpp  math_function.cu  signal_handler.cpp
test/: CMakeLists.txt  test_bernoulli.cpp  test_blocking_queue.cpp  test_cudnn.cpp  test_data_layer.cpp  test_data_transformer.cpp  test_divide.cpp  test_dropout.cpp  test_eigen.cpp  test_inner_product.cpp  test_io.cpp  test_math_function.cu  test_net.cpp  test_opencv.cpp  test_pooling_layer.cpp  test_relu.cpp  test_rng_generator.cpp  test_sigmoid.cpp  test_signal_handler.cpp  test_softmax.cpp  test_syncedmem.cpp  test_tanh.cpp
tools/: CMakeLists.txt
